--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -61,5 +61,34 @@ spring:
         jwt:
           issuer-uri: http://localhost:8080/realms/PolarBookshop
 
+logging:
+  pattern:
+    level: '%5p [${spring.application.name},%X{trace_id},%X{span_id}]'
+
+info:
+  system: Polar Bookshop
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: bindings, configprops, env, flyway, functions, health, heapdump, info, loggers, mappings, prometheus
+  endpoint:
+    health:
+      show-details: always
+      show-components: always
+      probes:
+        enabled: true
+  info:
+    env:
+      enabled: true
+    java:
+      enabled: true
+    os:
+      enabled: true
+  metrics:
+    tags:
+      application: ${spring.application.name}
+
 polar:
   catalog-service-uri: 'http://localhost:9001'
